--- a/index.html
+++ b/index.html
@@ -86,11 +86,6 @@ the raw CSV files.</p>
 <p>This demo dataset is provided for educational/demonstration purposes.
 You may reuse the data and documentation freely.</p>
 <h2 id="contact">Contact</h2>
-<p>Repository owner: Ricky Olivier.</p>
-<h2 id="scripts">Scripts</h2>
-<p>See <a
-href="https://github.com/ricky-lv426/data_spec_demo/blob/main/scripts/README.md">Scripts
-documentation</a> — detailed usage and assumptions for the scripts in
-the <code>scripts/</code> folder.</p>
+<p>Repository owner: Ricky Olivier (ricky-lv426).</p>
 </body>
 </html>
