deploy: 9156d6fa4cab95439924886bc7bc5d908f370888

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ href="data/derived_patient_status.csv">data/derived_patient_status.csv</a>
 <code>scripts/derive_patient_status.py</code>. Contains one row per
 patient with computed BMI, weight category, blood pressure category, and
 assumed heights. See the Scripts section below for details.</p></li>
-<li><p><a href="processing_workflow.md">Processing workflow</a> —
+<li><p><a href="processing_workflow.html">Processing workflow</a> —
 describes the steps and script used to produce the derived
 dataset.</p></li>
 </ul>
